[gd_scene load_steps=5 format=3 uid="uid://cdthp4k3q0cgr"]

[ext_resource type="Script" path="res://Battlescreen/BattleScreen.gd" id="1_cnmqh"]
[ext_resource type="PackedScene" uid="uid://djujc4ihhsif0" path="res://Gamepad/game_pad.tscn" id="2_p1j3l"]
[ext_resource type="PackedScene" uid="uid://dgh4l1gffvlkb" path="res://Battlescreen/AnimationManager.tscn" id="3_a0wn2"]
[ext_resource type="Script" path="res://Eventmanager/EventManager.gd" id="4_iu5y7"]

[node name="BattleScreen" type="Node2D"]
script = ExtResource("1_cnmqh")

[node name="GamePad" parent="." instance=ExtResource("2_p1j3l")]
position = Vector2(619, 33)

[node name="AnimationManager" parent="." instance=ExtResource("3_a0wn2")]

[node name="EventManager" type="Node" parent="."]
script = ExtResource("4_iu5y7")
json_path = "res://Eventmanager/events/battle1.json"
